# rapidcheck_cmaketest

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md
src/: main.cpp
